--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.fiap.vivon"
+        applicationId "com.fiap.vivo"
         minSdk 28
         targetSdk 32
         versionCode 1
@@ -47,14 +47,15 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0-alpha04'
     implementation 'com.github.rtoshiro.mflibrary:mflibrary:1.0.0'
     implementation platform('com.google.firebase:firebase-bom:29.0.4')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
     implementation 'com.google.firebase:firebase-firestore-ktx'
+    androidTestImplementation 'androidx.test:rules:1.4.0'
 
-    var roomVersion = "2.4.1"
+    var roomVersion = "2.4.2"
 
     implementation("androidx.room:room-runtime:$roomVersion")
     //annotationProcessor("androidx.room:room-compiler:$roomVersion")
